# StudentMarkMgrSystem

./: CMakeLists.txt  readme.md
src/: main.c
src/io/: csvReader.c  csvReader.h  csvWriter.c  csvWriter.h  tablePrinter.c  tablePrinter.h
src/struct/: item.c  item.h  subTable.c  subTable.h  table.c  table.h
src/ui/: findMenu.c  findMenu.h  input.c  input.h  mainMenu.c  mainMenu.h  menu.c  menu.h
src/util/: assert.h  data.c  data.h  memory.c  memory.h  providers.h  seq.c  seq.h  stringUtil.c  stringUtil.h
